--- a/snippets/domain-cache.conf
+++ b/snippets/domain-cache.conf
@@ -8,7 +8,7 @@
   # Don't cache uris containing the following segments
   if ($request_uri ~* "/wp-admin/|/xmlrpc.php|wp-.*.php|/feed/|index.php|sitemap(_index)?.xml") {
     set $skip_cache 1;
-  }  
+  }
 
   # Don't use the cache for logged in users or recent commenters
   if ($http_cookie ~* "comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in") {
@@ -17,6 +17,7 @@
 
   # Use cached or actual file if they exists, otherwise pass request to WordPress
   location / {
+    include snippets/cors.conf;
     try_files $uri $uri/ /index.php$is_args$args;
   }
 
@@ -28,4 +29,3 @@
   # location ~ /purge(/.*) {
   #   fastcgi_cache_purge DOMAIN "$scheme$request_method$host$1";
   # }
-
