--- a/snippets/domain-wpcache.conf
+++ b/snippets/domain-wpcache.conf
@@ -10,7 +10,7 @@
   # Don't cache uris containing the following segments
   if ($request_uri ~* "/wp-admin/|/xmlrpc.php|wp-.*.php|/feed/|index.php|sitemap(_index)?.xml") {
     set $cache_uri 'null cache';
-  }  
+  }
 
   # Don't use the cache for logged in users or recent commenters
   if ($http_cookie ~* "comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in") {
@@ -19,6 +19,7 @@
 
   # Use cached or actual file if they exists, otherwise pass request to WordPress
   location / {
+    include snippets/cors.conf;
     try_files $uri $uri/ /wp-content/cache/$cache_plugin/$http_host/$cache_uri/index.html /index.php$is_args$args;
   }
 
@@ -30,4 +31,3 @@
   location ~ /purge(/.*) {
       fastcgi_cache_purge DOMAIN "$scheme$request_method$host$1";
   }
-
